reseed dev db with fewer topics

--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -3,7 +3,7 @@
 <div class="ui-widget">
   <div class="new-topic-block">
     <label for="topic-title">I want to see more:</label>
-    <input id="topic-title" type="text" name="topic[title]">
+    <input id="topic-title" class="form-control" type="text" name="topic[title]">
     <button class="btn green add-user-topic">Submit!</button>
   </div>
 </div>
