--- a/app/assets/templates/users/update.jst.ejs
+++ b/app/assets/templates/users/update.jst.ejs
@@ -4,23 +4,15 @@
     <table class="centered">
       <tr>
         <td><label for="username">Username:</label></td>
-        <td><input id="username" type="text" name="user[username]" value="<%= model.escape('username') %>"></td>
+        <td><input id="username" class="form-control" type="text" name="user[username]" value="<%= model.escape('username') %>"></td>
       </tr>
       <tr>
         <td><label for="real-name">Your Name:</label></td>
-        <td><input id="real-name" type="text" name="user[real_name]" value="<%= model.escape('real_name') %>"></td>
+        <td><input id="real-name" class="form-control" type="text" name="user[real_name]" value="<%= model.escape('real_name') %>"></td>
       </tr>
       <tr>
         <td><label for="age">Age:</label></td>
-        <td><input id="age" type="number" name="user[age]" value="<%= model.escape('age') %>"></td>
-      </tr>
-      <tr>
-        <td><label for="age_min">Minimum target age:</label></td>
-        <td><input id="age_min" type="number" name="user[age_min]" value="<%= model.get('age_min') %>"></td>
-      </tr>
-      <tr>
-        <td><label for="age_max">Max target age:</label></td>
-        <td><input id="age_max" type="number" name="user[age_max]" value="<%= model.get('age_max') %>"></td>
+        <td><input id="age" type="number" class="form-control" name="user[age]" value="<%= model.escape('age') %>"></td>
       </tr>
     </table>
     <button class="btn green" id="submit-update">Update</button>
@@ -28,6 +20,6 @@
   
 <div class="new-feed-block">
   <label for="feed-url"><h3>Or add your personal feed:</h3></label>
-  <input id="feed-url" type="text" name="feed[url]">
+  <input id="feed-url" class="form-control" type="text" name="feed[url]">
   <button class="btn green add-feed">Submit!</button>
 </div>
