--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -240,7 +240,7 @@ ul.dropdown-menu {
   color: #EBEBEB;
   text-shadow: 0 0 15px #AA1111;
 }
-
+/*
 #main-content div img, #main-content a img, #main-content video, 
 div.teaser-content img,  div.teaser-content a img, div.teaser-content video {
   margin-left: 50% !important;
@@ -250,7 +250,7 @@ div.teaser-content img,  div.teaser-content a img, div.teaser-content video {
   display: block;
   margin-bottom: 20px !important;
   max-width: 75%;
-}
+}*/
 
 #main-content a:hover {
   text-decoration: none;
@@ -271,14 +271,14 @@ a.entry-title {
   margin: 20px 0 40px 0;
 }
 
-#main-content p, div.teaser-content p {
+/*#main-content p, div.teaser-content p {
   margin: 10px;
   font-size: 1.0em;
   text-indent: 40px;
   padding: 10px;
   line-height: 1.4;
   text-align: left;
-}
+}*/
 
 #main-content h3 {
   color: #AA1111;
