--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -4,6 +4,7 @@
   <div class="new-topic-block">
     <label for="topic-title">I want to see more:</label>
     <input id="topic-title" class="form-control" type="text" name="topic[title]">
-    <button class="btn green add-user-topic">Submit!</button>
+    <br>
+    <button class="btn plain add-user-topic">Submit!</button>
   </div>
 </div>
