--- a/app/assets/templates/feeds/feed_show.jst.ejs
+++ b/app/assets/templates/feeds/feed_show.jst.ejs
@@ -27,9 +27,10 @@
       <h4 style='margin-top:30px'>This feed has no entries at this time :(</h4>
   <% }; %>  
   <% if (Breedly.CURRENT_USER_ID == 2 || Breedly.CURRENT_USER_ID === feed.get('user_id') || Breedly.CURRENT_USER_ID == 3 || Breedly.CURRENT_USER_ID == 4) { %>
-    <button class="attempt-destroy-btn btn red">Delete this feed.</button>
+    <button class="delete-btn btn red">Delete this feed.</button>
   <% } %>
 </div>
+<div id="delete-confirmation"></div>
 <script>
   $(function() { 
     $('#main-content a').attr("target","_blank") 
