add form control for new feed and user update

--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -1,10 +1,10 @@
 <h3>Add A New Interest</h3>
 <br>
 <div class="ui-widget">
-  <div class="new-topic-block">
+  <form class="form-group">
     <label for="topic-title">I want to see more:</label>
     <input id="topic-title" class="form-control" type="text" name="topic[title]">
     <br>
-    <button class="btn plain add-user-topic">Submit!</button>
-  </div>
+    <button type="submit" class="btn plain add-user-topic form-control">Submit!</button>
+  </form>
 </div>
