--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -28,11 +28,13 @@
     </ul>
     <form class="navbar-form navbar-right" role="search">
       <div class="form-group">
-        <button type="submit" class="btn btn-default plain" id="random-feed">Show Me a Random Feed!</button>
-        <p style="display:inline">or..</p>
         <input type="text" class="form-control" id="feed-title" placeholder="feed title">
         <button type="submit" class="btn btn-default plain" id="nav-feed-search">Search</button>
       </div>
+    </form>
+    <form class="navbar-form navbar-right form-group">
+      <button class="btn btn-default plain" id="random-feed">Show Me a Random Feed!</button>
+      <p style="display:inline">or..</p>
     </form>
   </div>
 </div>
