--- a/app/assets/templates/topics/new_topic.jst.ejs
+++ b/app/assets/templates/topics/new_topic.jst.ejs
@@ -8,3 +8,6 @@
     <button type="submit" class="btn plain add-user-topic form-control">Submit!</button>
   </form>
 </div>
+<br>
+<button id="generate-suggestions" class="btn plain form-control">What should I check out?</button>
+<div class="search-result-content"></div>
