--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -18,6 +18,8 @@
           <li role="separator" class="divider"></li>
           <li><a href="#" id="user-topic-btn">Add an Interest</a></li>
           <li role="separator" class="divider"></li>
+          <li><a href="#help" id="help-btn">Help</a></li>
+          <li role="separator" class="divider"></li>
           <li><a href="#" id="logout-btn">Log Out</a></li>
         </ul>
       </li>
