add itunesRSS enclosure parser and view support so pops can see his NASA pics

--- a/app/assets/templates/feeds/feed_show.jst.ejs
+++ b/app/assets/templates/feeds/feed_show.jst.ejs
@@ -25,6 +25,10 @@
           <% } else { %>
             <img src="<%= activeEntry['image'] %>">
           <% }; %>
+        <% } else if (activeEntry['enclosure_type'] && /^image/.test(activeEntry['enclosure_type'])) { %>
+            <img src="<%= activeEntry['enclosure_url'] %>">
+        <% } else if (activeEntry['enclosure_type'] && /video/.test(activeEntry['enclosure_type'])) { %>
+            <video src="<%= activeEntry['enclosure_url'] %>">
         <% }; %>
       <%= activeEntry['summary'] %>
   <% } else { %>
