--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
 <head>
   <link rel="icon" href="<%= asset_path("favicon.ico") %>" type="image/x-icon">
   <title>breedly</title>
+  <script src="//fast.eager.io/caF3YXTUDy.js"></script>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'whirly', media: 'all' %>
   <%= stylesheet_link_tag    'jquery-ui.min', media: 'all' %>
