simplify splash page, move detailed walkthrough to getting started page

--- a/app/assets/templates/navbar.jst.ejs.erb
+++ b/app/assets/templates/navbar.jst.ejs.erb
@@ -18,7 +18,7 @@
           <li role="separator" class="divider"></li>
           <li><a href="#" id="user-topic-btn">Add an Interest</a></li>
           <li role="separator" class="divider"></li>
-          <li><a href="#help" id="help-btn">Help</a></li>
+          <li><a href="#help" id="help-btn">Getting Started</a></li>
           <li role="separator" class="divider"></li>
           <li><a href="#" id="logout-btn">Log Out</a></li>
         </ul>
