--- a/app/assets/templates/root.jst.ejs
+++ b/app/assets/templates/root.jst.ejs
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="sidebar-nav-fixed affix" id="feeds-index-container">
     <h4 style="color:#337AB7" class="index-title"> My Feeds </h4>
-      <div class="well pre-scrollable" style="background-color:black">
+      <div class="well pre-scrollable" style="background-color:black" data-intro="Any feeds you subscribe to will automatically be added here.  You can drag and drop them to keep your favorites at the top of the list." data-step="2" data-position="right">
           <ul class="nav" id="feeds-index"></ul>
       </div>
   </div>
@@ -16,7 +16,7 @@
 
   <div class="sidebar-nav-fixed pull-right affix" id="entries-index-container">
   <h4 class="index-title" style="color:black"> Latest Entries </h4>
-    <div class="well pre-scrollable" style="background-color:#A11111">
+    <div class="well pre-scrollable" style="background-color:#A11111" data-intro="The latest entries for the feed you're viewing will go here.  Hover over any for a preview of the feed." data-step="3" data-position="left">
         <ul class="nav" id="entries-index"></ul>
     </div>
   </div>
