--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'whirly', media: 'all' %>
   <%= stylesheet_link_tag    'jquery-ui.min', media: 'all' %>
+  <%= stylesheet_link_tag    'introjs', media: 'all' %>
  
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
