update splash formatting for walkthrough, remove splash img

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -469,11 +469,11 @@ a.or-link:hover {
 }
 
 #tour-trigger {
-  color: #EBEBEB;
+  color: #A11111;
   text-align: center;
   margin-left: 50%;
   font-size: 1.2em;
-  background-color: rgba(20, 20, 20, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   transform: translateX(-50%) !important;
   -webkit-transform: translateX(-50%) !important;
   -ms-transform: translateX(-50%) !important;
