--- a/app/assets/templates/splash.jst.ejs.erb
+++ b/app/assets/templates/splash.jst.ejs.erb
@@ -1,7 +1,7 @@
 <div class="splash clearfix">
   <div class="clearfix" style="padding:200px 0 200px 0">
     <img style="max-width:100%" alt="splash" src="<%= asset_path('logo_full.png') %>"/>
-    <button class="btn submit" id="tour-trigger">I'd like a tour</button>
+    <button class="btn submit" id="tour-trigger">Take a Tour!</button>
   </div>
 </div>
 <script>
